--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
       "build/three.module.js"
     ],
     "directories": {}
+  },
+  "dependencies": {
+    "three-dragcontrols": "^0.88.2"
   }
 }
