--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "mrdoob/three.js",
   "jsnext:main": "build/three.module.js",
   "module": "build/three.module.js",
+  "engines": {
+    "node": "8.11.3"
+  },
   "files": [
     "package.json",
     "LICENSE",
